--- a/style.css
+++ b/style.css
@@ -28,6 +28,68 @@
   color: #fff;
 }
 
+.frame-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
+
+.gradient {
+  width: 72%;
+  height: 76%;
+  position: absolute;
+  bottom: 74px;
+  background: linear-gradient(to left, #35d08f, #e32e64);
+  border-radius: 10px;
+}
+
+header {
+  width: 100%;
+  height: 90%;
+  margin-top: 2rem;
+  margin-left: 10rem;
+  background-image: url(/assets/images/portrait.JPG);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+}
+@media screen and (max-width: 700px) {
+  header {
+    margin-left: 2.5rem;
+  }
+}
+header .social {
+  height: 100%;
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  margin-left: 10px;
+  text-align: center;
+}
+header .social .fa-brands {
+  margin-bottom: 10px;
+}
+header .social .line {
+  margin: 0 auto;
+  width: 4px;
+  border-radius: 10px;
+  height: 20%;
+  background: #ae81bf;
+  margin-bottom: 20px;
+}
+header h1 {
+  margin-left: 50px;
+  color: #fff;
+  font-size: 5rem;
+  font-family: "Playfair Display", serif;
+  font-weight: normal;
+  transform: translateY(-50px);
+}
+
 body {
   background-color: #211f22;
 }/*# sourceMappingURL=style.css.map */
