--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header h1 {
   justify-content: flex-end;
   align-items: flex-start;
   font-family: "Roboto" serif;
-  margin-top: 1rem;
+  margin-top: 3.5rem;
   padding: 3rem 5rem;
 }
 .about p {
@@ -113,6 +113,50 @@ header h1 {
 }
 .about .two {
   align-self: flex-end;
+}
+
+.projects .title {
+  margin-left: 50px;
+  margin-top: 8rem;
+  color: white;
+  font-size: 4rem;
+  font-family: "Playfair Display", serif;
+  font-weight: normal;
+  transform: translateY(-50px);
+}
+.projects .title span {
+  background-color: rgba(174, 129, 191, 0.3921568627);
+}
+.projects .images-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.projects img {
+  width: 170px;
+  height: 100vh;
+  margin: 30px 10px;
+}
+.projects .img-one {
+  transform: translateY(200px);
+}
+.projects .img-two {
+  transform: translateY(150px);
+}
+.projects .img-three {
+  transform: translateY(100px);
+}
+@media screen and (max-width: 680px) {
+  .projects .img-one {
+    margin-bottom: 6rem;
+  }
+  .projects .img-two {
+    margin-bottom: 6rem;
+  }
+  .projects .img-three {
+    margin-bottom: 6rem;
+  }
 }
 
 body {
