--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 @import "./partials/about";
 @import "./partials/projects";
 @import "./partials/reviews";
+@import "./partials/footer";
 
 
 body {
